--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./public/images/logo (2).svg" />
+    <link rel="icon" href="/images/logo (2).svg" />
+    
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta
       name="description"
       content="Exam Primed"
     />
-    <link rel="apple-touch-icon" href="./public/images/logo (2).svg" />
+    <link rel="apple-touch-icon" href="/images/logo (2).svg" />
     <title>Exam Primed</title>
   </head>
   <body>
